[package]
authors = ["Alex Vlasov <alex.m.vlasov@gmail.com>", "Konstantin Panarin <kp@matterlabs.dev>"]
edition = "2021"
name = "sync_vm"
version = "1.3.1"

resolver = "2"

[dependencies]
# franklin-crypto = {path = "../franklin-crypto", features = ["plonk", "multicore"]}
cs_derive = {path = "cs_derive"}
derivative = "*"
franklin-crypto = {git = "https://github.com/matter-labs/franklin-crypto", branch = "dev", features = ["multicore"]}
hex = "*"
itertools = "0.10"
num-bigint = {version = "0.4", features = ["serde"]}
num-integer = "0.1"
num-traits = "0.2"
once_cell = "*"
rand = "0.4"
sha2 = "0.10"
sha3 = "0.10"
# rescue_poseidon = {path = "../rescue-poseidon"}
arrayvec = "0.7"
eip712-signature = {git = "https://github.com/vladbochok/eip712-signature"}
num-derive = "0.3"
rescue_poseidon = {git = "https://github.com/matter-labs/rescue-poseidon.git"}
serde = {version = "1", features = ["derive"]}
smallvec = {version = "*", features = ["const_generics"]}
zk_evm = {git = "https://github.com/matter-labs/era-zk_evm.git", branch = "main"}
zkevm_opcode_defs = {git = "https://github.com/matter-labs/era-zkevm_opcode_defs.git", branch = "main"}

[profile.dev]
split-debuginfo = "unpacked"

[features]
external_testing = []
